v21.01/de/_sources/interfaces.rst.txt
Schnittstellen

Es stehen vier Schnittstellen zur Konfiguration und Datenübertragung
des

rc_cube

 zur Verfügung:

Web GUI\:(Abschnitt \ref{webgui:sect-web-gui})  Leicht zu bedienendes
grafisches Interface zum Konfigurieren und Kalibrieren des rc_cube,
zum Anzeigen von Livebildern, Aufrufen von Services, Visualisieren von
Ergebnissen, usw.

GigE Vision 2.0/GenICam-Schnittstelle\:(Abschnitt \ref{gigevision
:sect-genicam})  Konfiguration bild- und kamerabezogener
Einstellungen.

REST-API-Schnittstelle\:(Abschnitt \ref{rest_api:sect-rest-api})
Programmierschnittstelle zur Konfiguration des rc_cube, zur Abfrage
von Statusinformationen, zum Anfordern von Datenströmen, usw.

Ethernet KRL Schnittstelle (EKI)\:(Abschnitt \ref{eki:sect-eki})  API
zum Konfigurieren des rc_cube und Ausführen von Service-Anfrage von
KUKA KSS Robotern aus.

Zeitsynchronisation\:(Abschnitt \ref{time_sync:sect-time-sync})
Zeitsynchronisation zwischen dem rc_cube und dem Anwendungs-PC.

